// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser can handle blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline",
        },
      ],
      "keyword": undefined,
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
    Object {
      "children": Array [],
      "name": "SRC",
      "params": Array [
        "javascript",
      ],
      "type": "block",
      "value": "console.log('hello')
console.log('world')",
    },
  ],
  "settings": Object {},
  "type": "root",
}
`;

exports[`Parser can handle broken blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline",
        },
      ],
      "keyword": undefined,
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "#+BEGIN_SRC javascript",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "console.log('hello')",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "console.log('world')",
        },
      ],
      "type": "paragraph",
    },
  ],
  "settings": Object {},
  "type": "root",
}
`;

exports[`Parser can handle broken blocks 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline",
        },
      ],
      "keyword": undefined,
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "console.log('hello')",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "console.log('world')",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "#+END_SRC",
        },
      ],
      "type": "paragraph",
    },
  ],
  "settings": Object {},
  "type": "root",
}
`;

exports[`Parser can handle broken drawers 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline",
        },
      ],
      "keyword": undefined,
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": ":PROPERTIES:",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "key: value",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "key: value",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "Paragraph",
        },
      ],
      "type": "paragraph",
    },
  ],
  "settings": Object {},
  "type": "root",
}
`;

exports[`Parser can handle drawers 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline",
        },
        Object {
          "children": Array [],
          "name": "PROPERTIES",
          "type": "drawer",
          "value": "key1: value 1
key2: value 2",
        },
      ],
      "keyword": undefined,
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
  ],
  "settings": Object {},
  "type": "root",
}
`;

exports[`Parser works 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "type": "text",
          "value": "headline one",
        },
        Object {
          "children": Array [],
          "keyword": "DEADLINE",
          "timestamp": "<2018-01-01 Mon>",
          "type": "planning",
        },
        Object {
          "children": Array [],
          "name": "PROPERTIES",
          "type": "drawer",
          "value": "key: value
key: value",
        },
      ],
      "keyword": "NEXT",
      "level": 1,
      "priority": undefined,
      "tags": Array [],
      "type": "headline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "desc": "Here's",
          "path": "https://github.com/xiaoxinghu/OrgMarker/releases",
          "type": "link",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": " to the ",
        },
        Object {
          "children": Array [],
          "type": "bold",
          "value": "crazy",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": " ones, the /misfits/, the ",
        },
        Object {
          "children": Array [],
          "type": "underline",
          "value": "rebels",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": ", the ",
        },
        Object {
          "children": Array [],
          "type": "code",
          "value": "troublemakers",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": ",",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": "the round pegs in the ",
        },
        Object {
          "children": Array [],
          "type": "strike-through",
          "value": "round",
        },
        Object {
          "children": Array [],
          "type": "text",
          "value": " square holes...",
        },
      ],
      "type": "paragraph",
    },
  ],
  "settings": Object {
    "title": "hello world",
    "todos": Array [
      "TODO",
      "NEXT",
      "DONE",
    ],
  },
  "type": "root",
}
`;
